# ChangeLog for dev-perl/prefork
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/ChangeLog,v 1.25 2008/08/02 11:05:10 tove Exp $

  02 Aug 2008; Torsten Veller <tove@gentoo.org> -prefork-1.00.ebuild:
  Cleanup

*prefork-1.02 (02 Aug 2008)

  02 Aug 2008; Torsten Veller <tove@gentoo.org> +prefork-1.02.ebuild:
  Version bump

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> prefork-1.01.ebuild:
  alpha stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> prefork-1.01.ebuild:
  Stable on x86, bug #169152.

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org> prefork-1.01.ebuild:
  Marking ~mips, tested on swarm

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> prefork-1.01.ebuild:
  Stable on hppa

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> prefork-1.01.ebuild:
  ppc stable

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> prefork-1.01.ebuild:
  Mark 1.01 stable on ia64

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> prefork-1.00.ebuild,
  prefork-1.01.ebuild:
  Marking amd64, sparc stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org> prefork-1.00.ebuild,
  prefork-1.01.ebuild:
  Adding perl dep; fixed DEPEND

*prefork-1.01 (30 Jul 2006)

  30 Jul 2006; Michael Cummings <mcummings@gentoo.org> +prefork-1.01.ebuild:
  Version bump

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> prefork-1.00.ebuild:
  Fixed RDEPEND wrt bug #134781

  03 Mar 2006; Chris White <chriswhite@gentoo.org> prefork-1.00.ebuild:
  amd64 stable for 1.00.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> prefork-1.00.ebuild:
  Virtuals for perl-core

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> prefork-1.00.ebuild:
  Mark 1.00 stable on ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> prefork-1.00.ebuild:
  Mark 1.00 stable on alpha

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> prefork-1.00.ebuild:
  Stable on ppc.
